--- a/.github/ISSUE_TEMPLATE/location-identifier-proposal.yml
+++ b/.github/ISSUE_TEMPLATE/location-identifier-proposal.yml
@@ -3,7 +3,7 @@ description: Submit a proposal for a new location identifier in the SC-DEX core 
 title: "[Location Identifier Proposal]: "
 labels: ["location identifier", "proposal"]
 assignees:
-  - octocat
+  - "octocat"
 body:
   - type: markdown
     attributes:
