--- a/.github/ISSUE_TEMPLATE/location-identifier-proposal.yml
+++ b/.github/ISSUE_TEMPLATE/location-identifier-proposal.yml
@@ -3,7 +3,7 @@ description: Submit a proposal for a new location identifier in the SC-DEX core 
 title: "[Location Identifier Proposal]: "
 labels: ["location identifier", "proposal"]
 assignees:
-  - "octocat"
+  - octocat
 body:
   - type: markdown
     attributes:
@@ -61,8 +61,8 @@ body:
       label: Is the Identifier Open for Use?
       description: Indicate whether this identifier is publicly available for use.
       options:
-        - Yes
-        - No
+        - "Yes"
+        - "No"
     validations:
       required: true
 
