--- a/.github/ISSUE_TEMPLATE/location-identifier-proposal.yml
+++ b/.github/ISSUE_TEMPLATE/location-identifier-proposal.yml
@@ -95,7 +95,7 @@ body:
         - label: Facility Name
         - label: Certification Information
         - label: Contact Details
-        - label: Other (please specify in the description)
+        - label: Other (please specify in the additional information field)
     validations:
       required: true
 
