--- a/.github/ISSUE_TEMPLATE/organization-identifier-proposal-template.yml
+++ b/.github/ISSUE_TEMPLATE/organization-identifier-proposal-template.yml
@@ -1,4 +1,4 @@
-name: New Organization Identifier Proposal
+name: Organization Identifier Proposal
 description: Submit a proposal for a new organization identifier in the SC-DEX core schema.
 title: "[Organization Identifier Proposal]: "
 labels: ["organization identifier", "proposal"]
