--- a/.github/ISSUE_TEMPLATE/location-identifier-proposal-template.yml
+++ b/.github/ISSUE_TEMPLATE/location-identifier-proposal-template.yml
@@ -67,6 +67,24 @@ body:
       required: true
 
   - type: input
+    id: size
+    attributes:
+      label: Approximately how many organizations have been issued an identifier?
+      description: Number of organizations issued an identifier under this system.
+      placeholder: e.g., 1,000,000 (estimations okay)
+    validations:
+      required: false
+
+  - type: input
+    id: coverage
+    attributes:
+      label: Geographic Coverage
+      description: Is this identifier globally adopted, or are there concentrated/limited areas of use?
+      placeholder: e.g., "London, or Brazil, or global, or MENA region"
+    validations:
+      required: false
+      
+  - type: input
     id: register-link
     attributes:
       label: Link to Register
